# AlgeSDK

./: .gitignore  Kickstart.bat  Kickstart.sh  README.md  RELNOTES.txt  STATUS.txt  send.sh  setup-deps.bat  w.bat
Apps/: collect.sh
Apps/Arkanoid2D/: README.md  app.hpp
Apps/Brochures/: app.hpp
Apps/COMMON.Assets/: DSC5164.tga
Apps/ColorSwitch2D/: App.hpp
Apps/DemoCoverflow/: app.hpp
Apps/DemoCoverflow.Assets/: App.hpp
Apps/DemoFont/: App.hpp
Apps/DemoFont.Assets/: App.hpp
Apps/DemoFontV1/: App.hpp
Apps/DodgeTheCreeps/: App.hpp
Apps/Hayai/: App.hpp  PCSClient.hpp
Apps/Ivank_Box2D/: App.hpp  App_noimgui.hpp
Apps/JapCarBrochures/: app.hpp
Apps/JapCarBrochures.Assets/: App.hpp
Apps/Juices/: App.hpp
Apps/LevelSelect/: App.hpp  LevelSelector.hpp
Apps/Metallic/: App.hpp
Apps/Misc/: App.hpp
Apps/MotoX3/: App.hpp
Apps/NeHeLesson05/: App.hpp
Apps/NeHeLesson09/: App.hpp
Apps/NeHeLesson19/: App.hpp
Apps/NeHeLesson19.Assets/: App.hpp
Apps/Planets/: App.hpp  AppV0.hpp  AppV2.hpp  AppV3.hpp  Box2DebugDraw.hpp  PlanetsApp.hpp  SN11.hpp  SolarDb.hpp  StarShipAppGui.hpp  Starship.hpp  appV1.hpp
Apps/Planets.Assets/: d-pad.tga  pointer.xcf  skydome.tga
Apps/PlanetsAda/: App.cpp
Apps/PoppingTime/: App.hpp  App0.hpp  DemoText.hpp  Hello.hpp  PoppingTimeLayer1.hpp  PoppingTimeLogic.hpp  Raw3D.hpp
Apps/XFs/edu.lmu.cs/: CMakeLists.txt  cockpit.h  fly.cpp  geometry.h  landscape.cpp  landscape.h  ship.h
Helpers/: alx_exporter.py  alx_exporter2.py  dash_w_gnatsd.bat
SDKSRC/: README.md  up.bat
_acnode_/: Acnode.tga  Thumbs.db
(+668 files in other folders)
